reverse-proxy/openchamber/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: openchamber-service
subsets:
  - addresses:
      - ip: 192.168.0.7
    ports:
      - name: http
        port: 3000
        protocol: TCP
